# fp-homework2020

./: .gitignore  README.md  stack.yaml
hw0/: hw0.cabal
hw0/src/: Part1.hs  Part2.hs  Part3.hs  Part4.hs  Part5.hs  Part6.hs  Part7.hs
hw0/test/: Spec.hs
hw1/: README.md  hw1.cabal
hw1-second-chance/: README.md  hw1-second-chance.cabal
hw1-second-chance/src/: Part6.hs
hw1-second-chance/test/: Main.hs
hw1-second-chance/test/Part6/: Unit.hs
hw1/src/: Part1.hs  Part2.hs  Part3.hs  Part4.hs
hw1/test/: Main.hs  Test1.hs  Test2.hs
hw1/test/Part1/: Unit.hs
hw1/test/Part2/: PropertyBased.hs  Unit.hs
hw1/test/Part3/: Unit.hs
hw1/test/Part4/: Unit.hs
hw2/: README.md  hw2.cabal
hw2/app/: Main.hs
hw2/src/: FileManager.hs  Lib.hs  Programs.hs  Shit.hs  Typings.hs  Utils.hs
hw2/src/Programs/: Cat.hs  ChangeDirectory.hs  Find.hs  List.hs  MakeDirectory.hs  Remove.hs  WriteDataInFile.hs
hw2/src/Utils/: FileSystem.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw4/: LICENSE  README.md  hw4.cabal
