name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/stormtrooper1859/fp-homework2020/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Aleksandr Osipov
maintainer:          sashaosipov.98@gmail.com
copyright:           2020 Aleksandr Osipov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Part1, Part2, Part3, Part4
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Part1.Unit, Part2.PropertyBased, Part2.Unit, Part3.Unit, Part4.Unit
  build-depends:       base
                     , hw1
                     , hspec
                     , hedgehog
                     , tasty
                     , tasty-hspec
                     , tasty-hedgehog
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
